--- a/My2020SMS/app/src/main/res/values/strings.xml
+++ b/My2020SMS/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My 2020 SMS</string>
+    <string name="txtbtnSaveDraft"><![CDATA[Save Draft & Reciepient]]></string>
 </resources>
